checkbox position fixed, footer links overflow added

--- a/source/sass/blocks/accordeon.scss
+++ b/source/sass/blocks/accordeon.scss
@@ -1,7 +1,7 @@
 .accordeon__toggle {
   @media (max-width: $breakpoint-mobile) {
     width: 100%;
-    height: 30px;
+    height: 60px;
     padding: 0;
     border: 0;
     background-color: transparent;
